Make Village community and accounts production-ready
